--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ function handleComplete(evt,comp) {
 </head>
 <body onload="init();" style="margin:0; padding:0; box-sizing: border-box;">
 	<section id="CatFish" class="container"
-		style="background-color:#fff; position: absolute; bottom: 0px; min-width:360px; width:100%; min-height:70px; z-index:1; border: 1px solid #d3d3d3;">
+		style="background-color:#fff; position: absolute; bottom: 0px; min-width:360px; width:100%; min-height:70px; z-index:1;">
 		<div class="closeCatFish"
 			style="position: absolute; right: 3px; top: 3px; display: block; z-index: 3; cursor: pointer; max-width:16px; width:100%; height:16px; padding: 0 0 15px 15px;"
 			onclick="closeButtonCatFish()">
@@ -203,7 +203,7 @@ function handleComplete(evt,comp) {
 				<img alt="close_images_btn" src="CatFish_knob_1000x120_02pngcopy.png" style="display: block;
     width: 100%;"></a>
 		</div>
-		<div style="cursor: pointer;" onclick="return ar_callLink({target: '_blank', other: 'https://rozetka.com.ua/ua/news-articles-promotions/promotions/163563_sale_remington/?utm_source=hotline&utm_medium=banner&utm_campaign=40percent-nov21'})">
+		<div style="cursor: pointer; border: 1px solid #d3d3d3;" onclick="return ar_callLink({target: '_blank', other: 'https://rozetka.com.ua/ua/news-articles-promotions/promotions/163563_sale_remington/?utm_source=hotline&utm_medium=banner&utm_campaign=40percent-nov21'})">
 			<div id="animation_container" style="max-width:360px; width:100%; height:70px; margin: 0 auto;">
 				<canvas id="canvas" width="360" height="70" style="display: block;"></canvas>
 				<div id="dom_overlay_container"
