--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <meta name="authoring-tool" content="Adobe_Animate_CC">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Permissions-Policy" content="interest-cohort=()"/>
-<title>Remington_catfish_320×70_ny_01</title>
+<title>Remington_catfish_320x70_ny_01</title>
 <!-- write your code here -->
 <script type="text/javascript" src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-<script type="text/javascript" src="Remington_catfish_320×70_ny_01.js"></script
+<script type="text/javascript" src="Remington_catfish_320x70_ny_01.js"></script>
 <script type="text/javascript" src="https://content.adriver.ru/html.js"></script>
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
