--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="Permissions-Policy" content="interest-cohort=()"/>
-<title>Remington_catfish_320x70_ny_01</title>
+<title>CatFish_1000x120_ny_01</title>
 <!-- write your code here -->
 <script type="text/javascript" src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-<script type="text/javascript" src="Remington_catfish_320x70_ny_01.js"></script>
+<script type="text/javascript" src="CatFish_1000x120_ny_01.js"></script>
 <script type="text/javascript" src="https://content.adriver.ru/html.js"></script>
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
@@ -24,7 +22,7 @@ function init() {
 	canvas = document.getElementById("canvas");
 	anim_container = document.getElementById("animation_container");
 	dom_overlay_container = document.getElementById("dom_overlay_container");
-	var comp=AdobeAn.getComposition("F41C8E1581D75F4ABC93710CD3F5890D");
+	var comp=AdobeAn.getComposition("66854723439C444E8F6766C86734188C");
 	var lib=comp.getLibrary();
 	var loader = new createjs.LoadQueue(false);
 	loader.addEventListener("fileload", function(evt){handleFileLoad(evt,comp)});
@@ -45,7 +43,7 @@ function handleComplete(evt,comp) {
 	for(i=0; i<ssMetadata.length; i++) {
 		ss[ssMetadata[i].name] = new createjs.SpriteSheet( {"images": [queue.getResult(ssMetadata[i].name)], "frames": ssMetadata[i].frames} )
 	}
-	exportRoot = new lib.Remington_catfish_32070_ny_01();
+	exportRoot = new lib.CatFish_1000x120_ny_01();
 	stage = new lib.Stage(canvas);	
 	//Registers the "tick" event listener.
 	fnStartAnimation = function() {
@@ -193,24 +191,27 @@ function handleComplete(evt,comp) {
 </script>
 <!-- write your code here -->
 </head>
-<body onload="init();" style="margin:0; padding:0; box-sizing: border-box;">
+<body onload="init();" style="margin:0px; padding:0; box-sizing: border-box;">
 	<section id="CatFish" class="container"
-		style="background-color:#E7E7E7; position: absolute; bottom: 0px; min-width:360px; width:100%; min-height:70px; z-index:1;">
+		style="overflow:hidden; position: absolute; bottom: 0px; min-width:1000px; width:100%; height:120px;">
 		<div class="closeCatFish"
-			style="position: absolute; right: 3px; top: 3px; display: block; z-index: 3; cursor: pointer; max-width:16px; width:100%; height:16px; padding: 0 0 15px 15px;"
+			style="position: absolute; right: 5px; top: 5px; display: block; z-index: 3; cursor: pointer;"
 			onclick="closeButtonCatFish()">
 			<a class="img_btn" style="text-decoration: none; ">
 				<img alt="close_images_btn" src="CatFish_knob_1000x120_02pngcopy.png" style="display: block;
-    width: 100%;"></a>
+    max-width: 100%;"></a>
 		</div>
-		<div style="cursor: pointer;" onclick="return ar_callLink({target: '_blank', other: 'https://bit.ly/3GKAEPE'})">
-			<div id="animation_container" style="max-width:360px; width:100%; height:70px; margin: 0 auto;">
-				<canvas id="canvas" width="360" height="70" style="display: block;"></canvas>
+		<section style="cursor: pointer; position: absolute; z-index:2; left: 0; right: 0;" onclick="return ar_callLink({target: '_blank', other: 'https://bit.ly/3dMDK98'})">
+			<div id="animation_container" style="min-width:1000px; width:100%; height:120px; margin: 0 auto;">
+				<canvas id="canvas" width="1000" height="120" style="display: block;"></canvas>
 				<div id="dom_overlay_container"
-					style="position: absolute; max-width:360px; width:100%; height:70px; display: block; bottom:0; right:0; left:0; margin:0 auto;">
+					style="overflow:hidden; min-width:1000px; width:100%; height:120px; display: block;">
 				</div>
 			</div>
-		</div>
+		</section>
+		<section class="container" onclick="return ar_callLink({target: '_blank', other: 'https://bit.ly/3dMDK98'})"
+			style="position: absolute; background-color:#E7E7E7; cursor: pointer;  bottom: 0px; min-width:1000px; width:100%; height:120px;">
+		</section>
 	</section>
 	<script>
 		function closeButtonCatFish() {
